Implementando SmtpEmailService com servidor do Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=eduardo.silva@somosicev.com
-default.recipient=eduardo.silva@somosicev.com
+default.sender=mrtibiano03@gmail.com
+default.recipient=mrtibiano03@gmail.com
