--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.profiles.active=dev
 
-default.sender=mrtibiano03@gmail.com
-default.recipient=mrtibiano03@gmail.com
+default.sender=
+default.recipient=
