Configuração inicial do Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
-default.sender=
-default.recipient=
+default.sender=mrtibiano03@gmail.com
+default.recipient=mrtibiano03@gmail.com
